--- a/style.css
+++ b/style.css
@@ -1,20 +1,45 @@
-#main{
+
+body {
+    background: #f5f5f5;
+}
+
+
+ul {
+    display: flex;
+    list-style:none;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content:center;
+    flex-basis: 80%;
+}
+
+li {
+    flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    align-items: center;
+}
+span {
+
+    font-size: 14px;
+    color: #5a5a5a;
     text-align: center;
 }
 
-#name{
-    color: blueviolet;
-    font-size: 20px;
+.image {
+    width: 240px;
+    height: 290px;
+    margin: 5px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-#position{
-    color: aqua;
+.icons{
+    width: 20px;
+    height: 20px;
 }
-#socials{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 
 
